Added new view in order to implement new UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2011 Pierre Malarme
  
   Authors: Pierre Malarme <pmalarme at ulb.ac.be>
@@ -36,4 +35,16 @@
     <string name="metadata_birth_date">Birth Date</string>
     <string name="metadata_age">Age</string>
     <string name="metadata_anonymous">&lt;anonymous&gt;</string>
+    <string name="title_activity_dicomviewer">DICOMViewer</string>
+
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_example">Example action</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
