--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
         <item>Protractor</item>
         <item>Area</item>
         <item>Metadata</item>
+        <item>Annotation</item>
         <item>Presets</item>
     </string-array>
     <string-array name="child_items">
