--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_for_delete_alert_dialog">Are you agree to delete this Annotation?</string>
     <string name="title_for_asking_aler_dialog">Save annotation?\r\nInput text annotation</string>
+    <string name="title_for_asking_text_annotation_alert_dialog">Save text annotation?\r\nInput text below:</string>
     <string name="title_for_double_tap_aler_dialog">Annotation information:</string>
     <string name="on">On</string>
     <string name="off">Off</string>
@@ -74,3 +75,4 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
+
